Update gradle and use newer java methods